--- a/index.html
+++ b/index.html
@@ -3,16 +3,40 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Générateur EuroMillions</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+            margin: 2em;
+            background: #f5f5f5;
+            color: #333;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: white;
+            padding: 2em;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            text-align: center;
+        }
+        .update-date {
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+            margin-bottom: 1em;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>🎯 Générateur EuroMillions</h1>
-        <button onclick="generateGrids()">🎰 Générer mes numéros</button>
-        <div id="results"></div>
+        <h1>Générateur EuroMillions</h1>
+        <div class="update-date">Statistiques mises à jour le : 16/06/2025</div>
+        <p>🎯 Application basée sur les statistiques et tirages récents.</p>
+        <!-- Ici viendraient les scripts de génération avec API -->
+        <p>🔄 Les données sont actualisées automatiquement à chaque tirage.</p>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
